src/tests/functionality/assignment_1_expressions/valid/08_shift_operators.c
int main() {
    1 << 2;
    8 >> 1;
    (2 + 1) << 3;
    64 >> (1 + 2);
    return 0;
}