src/tests/functionality/assignment_1_expressions/invalid_semantic/01_undeclared_identifier_expression.c
int main() {
    x + 3;
    return 0;
}